# YumeChain

./: .env.example  .gitignore  PROVIDER_EXAMPLES.md  README.md  SETUP.md  file_manager.py  list_models.py  llm_client.py  main.py  pelican_config.py  pelican_manager.py  prompt_templates.py  pyproject.toml  update_format.py
static/css/: novel.css
theme/templates/: article.html
yumechain/: __init__.py  __main__.py  cli.py  file_manager.py  flask_manager.py  hatena_client.py  llm_client.py  pelican_config.py  pelican_manager.py  prompt_templates.py
yumechain/static/css/: novel.css
yumechain/theme/templates/: base.html  index.html
