[project]
name = "YumeChain"
version = "0.1.0"
description = "Novel generation app using LLM (Gemini)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.0",
    "rich>=13.3.0",
    "flask>=2.3.0",
    "markdown>=3.4.0",
    "litellm>=1.0.0",
]

[project.scripts]
yumechain = "yumechain.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["yumechain"]
include = [
    "yumechain/**/*.py",
    "yumechain/static/**/*",
    "yumechain/theme/**/*",
]

[tool.hatch.build.targets.wheel.sources]
"yumechain" = "yumechain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
